@@ -12,7 +12,7 @@
 #ifndef GRAPH_H_
 #define GRAPH_H_
 
-#include "grconfig.h"
+#include "grtypes.h"
 #include "grevents.h"
 
  /*************************************************************************/
